ks/kafka-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-exporter
  labels:
    app: kafka-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-exporter
  template:
    metadata:
      labels:
        app: kafka-exporter
    spec:
      containers:
      - name: kafka-exporter
        image: danielqsj/kafka-exporter:latest
        args:
          - "--kafka.server=kafka.default.svc.cluster.local:9092"
        ports:
        - name: metrics
          containerPort: 9308
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter
spec:
  ports:
  - protocol: TCP
    port: 9308
    targetPort: 9308
  selector:
    app: kafka-exporter
