ks/mongodb-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-exporter
  labels:
    app: mongodb-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-exporter
  template:
    metadata:
      labels:
        app: mongodb-exporter
    spec:
      containers:
        - name: mongodb-exporter
          image: percona/mongodb_exporter:0.43.0
          ports:
            - name: metrics
              containerPort: 9216
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
spec:
  ports:
    - protocol: TCP
      port: 9216
      targetPort: 9216
  selector:
    app: mongodb-exporter
