ks/redis-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  labels:
    app: redis-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
      - name: redis-exporter
        image: oliver006/redis_exporter:latest
        args:
          - "--redis.addr=redis:6379"
        ports:
        - name: metrics
          containerPort: 9121
---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
spec:
  ports:
  - protocol: TCP
    port: 9121
    targetPort: 9121
  selector:
    app: redis-exporter
